@@ -1,3 +1,8 @@
+2003-12-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* strm.adb, strm.out:
+	Add non keep-alive tests.
+
 2003-12-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
